<resources>
    <string name="app_name">HouseM8</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testButton">Button</string>
    <string name="press">Press</string>
    <string name="to_main">to Main</string>
    <string name="button_to_nav_to_calendar_fragment">Button to nav to Calendar Fragment</string>
    <string name="radiobutton">RadioButton</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="write_a_message">Write a message</string>
    <string name="button">Button</string>
    <string name="button_to_send_message">button to send message</string>
    <string name="placeholder_message">Placeholder message</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="settings_menu_item">Settings Menu Item</string>
    <string name="housem8">HouseM8</string>
    <string name="log_out">log out</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="textview">TextView</string>
    <string name="houseid">houseID</string>
    <string name="this_is_a_test_user">This is a test user</string>
    <string name="notice_title">Notice Title</string>
    <string name="title">Title</string>
    <string name="notice">Notice</string>
    <string name="save">Save</string>
    <string name="housemateid">housemateID</string>
    <string name="your_name">Your name</string>
    <string name="already_registered">Already registered?</string>
    <string name="log_in_here">LOG IN HERE</string>
    <string name="name"><i>Name</i></string>
    <string name="email_address"><i>Email address</i></string>
    <string name="password"><i>Password</i></string>
    <string name="count_initial_value">0</string>
    <string name="button_label">Send</string>
    <string name="toast_message">Hurra!</string>
    <string name="input_placeholder">Write a message</string>
    <string name="test_message">This message a test message</string>
</resources>